--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
       {
         "from": "build/creator.png",
         "to": "creator.png"
+      },
+      {
+        "from": "build/icons/128x128.png",
+        "to": "app-icon.png"
       }
     ]
   }
